// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/TextField Text Field Sizes 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    css={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        css={
          Object {
            "alignItems": "center",
            "display": "flex",
            "position": "relative",
            "width": "fill-available",
          }
        }
      >
        <div
          css={[Function]}
        >
          <div
            css={[Function]}
          >
            <div
              css={
                Object {
                  "width": "100% ",
                }
              }
            >
              <input
                css={[Function]}
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                css={[Function]}
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        css={
          Object {
            "alignItems": "center",
            "display": "flex",
            "position": "relative",
            "width": "fill-available",
          }
        }
      >
        <div
          css={[Function]}
        >
          <div
            css={[Function]}
          >
            <div
              css={
                Object {
                  "width": "100% ",
                }
              }
            >
              <input
                css={[Function]}
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                css={[Function]}
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField Text Field Types 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    css={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        css={
          Object {
            "alignItems": "center",
            "display": "flex",
            "position": "relative",
            "width": "fill-available",
          }
        }
      >
        <div
          css={[Function]}
        >
          <div
            css={[Function]}
          >
            <div
              css={
                Object {
                  "width": "100% ",
                }
              }
            >
              <input
                css={[Function]}
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                css={[Function]}
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        css={
          Object {
            "alignItems": "center",
            "display": "flex",
            "position": "relative",
            "width": "fill-available",
          }
        }
      >
        <div
          css={[Function]}
        >
          <div
            css={[Function]}
          >
            <div
              css={
                Object {
                  "width": "100% ",
                }
              }
            >
              <input
                css={[Function]}
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                css={[Function]}
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        css={
          Object {
            "alignItems": "center",
            "display": "flex",
            "position": "relative",
            "width": "fill-available",
          }
        }
      >
        <div
          css={[Function]}
        >
          <div
            css={[Function]}
          >
            <div
              css={
                Object {
                  "width": "100% ",
                }
              }
            >
              <input
                css={[Function]}
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                css={[Function]}
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField Text Field with KNOBS 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    css={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        css={
          Object {
            "alignItems": "center",
            "display": "flex",
            "position": "relative",
            "width": "fill-available",
          }
        }
      >
        <div
          css={[Function]}
        >
          <div
            css={[Function]}
          >
            <div
              css={[Function]}
            >
              <span
                css={
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "justifyContent": "center",
                    "padding": "0.125rem",
                  }
                }
                onClick={[Function]}
              >
                <span
                  css={[Function]}
                />
              </span>
            </div>
            <div
              css={
                Object {
                  "width": "100% ",
                }
              }
            >
              <input
                css={[Function]}
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                css={[Function]}
              >
                Label
                 
              </label>
            </div>
            <div
              css={[Function]}
            >
              <span
                css={
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "justifyContent": "center",
                    "padding": "0.125rem",
                  }
                }
                onClick={[Function]}
              >
                <span
                  css={[Function]}
                />
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        css={
          Object {
            "alignItems": "center",
            "display": "flex",
            "position": "relative",
            "width": "fill-available",
          }
        }
      >
        <div
          css={[Function]}
        >
          <div
            css={[Function]}
          >
            <div
              css={[Function]}
            >
              <span
                css={
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "justifyContent": "center",
                    "padding": "0.125rem",
                  }
                }
                onClick={[Function]}
              >
                <span
                  css={[Function]}
                />
              </span>
            </div>
            <div
              css={
                Object {
                  "width": "100% ",
                }
              }
            >
              <input
                css={[Function]}
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                css={[Function]}
              >
                Label
                 
              </label>
            </div>
            <div
              css={[Function]}
            >
              <span
                css={
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "justifyContent": "center",
                    "padding": "0.125rem",
                  }
                }
                onClick={[Function]}
              >
                <span
                  css={[Function]}
                />
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField Text Field with Label 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    css={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        css={
          Object {
            "alignItems": "center",
            "display": "flex",
            "position": "relative",
            "width": "fill-available",
          }
        }
      >
        <div
          css={[Function]}
        >
          <div
            css={[Function]}
          >
            <div
              css={
                Object {
                  "width": "100% ",
                }
              }
            >
              <input
                css={[Function]}
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                css={[Function]}
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        css={
          Object {
            "alignItems": "center",
            "display": "flex",
            "position": "relative",
            "width": "fill-available",
          }
        }
      >
        <div
          css={[Function]}
        >
          <div
            css={[Function]}
          >
            <div
              css={
                Object {
                  "width": "100% ",
                }
              }
            >
              <input
                css={[Function]}
                disabled={false}
                placeholder="Label "
                required={false}
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        css={
          Object {
            "alignItems": "center",
            "display": "flex",
            "position": "relative",
            "width": "fill-available",
          }
        }
      >
        <div
          css={[Function]}
        >
          <div
            css={[Function]}
          >
            <div
              css={
                Object {
                  "width": "100% ",
                }
              }
            >
              <input
                css={[Function]}
                disabled={false}
                required={false}
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField Text Field with Placeholder, icon and size 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    css={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        css={
          Object {
            "alignItems": "center",
            "display": "flex",
            "position": "relative",
            "width": "fill-available",
          }
        }
      >
        <div
          css={[Function]}
        >
          <div
            css={[Function]}
          >
            <div
              css={[Function]}
            >
              <img
                height="16"
                src="https://brandmark.io/logo-rank/random/pepsi.png"
                style={
                  Object {
                    "background": "red",
                  }
                }
                width="16"
              />
            </div>
            <div
              css={
                Object {
                  "width": "100% ",
                }
              }
            >
              <input
                css={[Function]}
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                css={[Function]}
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        css={
          Object {
            "alignItems": "center",
            "display": "flex",
            "position": "relative",
            "width": "fill-available",
          }
        }
      >
        <div
          css={[Function]}
        >
          <div
            css={[Function]}
          >
            <div
              css={
                Object {
                  "width": "100% ",
                }
              }
            >
              <input
                css={[Function]}
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                css={[Function]}
              >
                Label
                 
              </label>
            </div>
            <div
              css={[Function]}
            >
              <img
                height="16"
                src="https://brandmark.io/logo-rank/random/pepsi.png"
                style={
                  Object {
                    "background": "red",
                  }
                }
                width="16"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        css={
          Object {
            "alignItems": "center",
            "display": "flex",
            "position": "relative",
            "width": "fill-available",
          }
        }
      >
        <div
          css={[Function]}
        >
          <div
            css={[Function]}
          >
            <div
              css={[Function]}
            >
              <img
                height="16"
                src="https://brandmark.io/logo-rank/random/pepsi.png"
                style={
                  Object {
                    "background": "red",
                  }
                }
                width="16"
              />
            </div>
            <div
              css={
                Object {
                  "width": "100% ",
                }
              }
            >
              <input
                css={[Function]}
                disabled={false}
                placeholder="Label"
                required={false}
              />
              <label
                css={[Function]}
              >
                Label
                 
              </label>
            </div>
            <div
              css={[Function]}
            >
              <img
                height="16"
                src="https://brandmark.io/logo-rank/random/pepsi.png"
                style={
                  Object {
                    "background": "red",
                  }
                }
                width="16"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField TextField disabled with label 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    css={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        css={
          Object {
            "alignItems": "center",
            "display": "flex",
            "position": "relative",
            "width": "fill-available",
          }
        }
      >
        <div
          css={[Function]}
        >
          <div
            css={[Function]}
          >
            <div
              css={
                Object {
                  "width": "100% ",
                }
              }
            >
              <input
                css={[Function]}
                disabled={true}
                placeholder="Label"
                required={false}
              />
              <label
                css={[Function]}
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        css={
          Object {
            "alignItems": "center",
            "display": "flex",
            "position": "relative",
            "width": "fill-available",
          }
        }
      >
        <div
          css={[Function]}
        >
          <div
            css={[Function]}
          >
            <div
              css={
                Object {
                  "width": "100% ",
                }
              }
            >
              <input
                css={[Function]}
                disabled={true}
                placeholder="Label"
                required={false}
              />
              <label
                css={[Function]}
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        css={
          Object {
            "alignItems": "center",
            "display": "flex",
            "position": "relative",
            "width": "fill-available",
          }
        }
      >
        <div
          css={[Function]}
        >
          <div
            css={[Function]}
          >
            <div
              css={
                Object {
                  "width": "100% ",
                }
              }
            >
              <input
                css={[Function]}
                disabled={true}
                placeholder="Label"
                required={false}
              />
              <label
                css={[Function]}
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField TextField locked with label 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    css={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        css={
          Object {
            "display": "flex",
            "flexDirection": "row",
            "flexWrap": "wrap",
          }
        }
      >
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            css={
              Object {
                "alignItems": "center",
                "display": "flex",
                "position": "relative",
                "width": "fill-available",
              }
            }
          >
            <div
              css={[Function]}
            >
              <div
                css={[Function]}
              >
                <div
                  css={
                    Object {
                      "width": "100% ",
                    }
                  }
                >
                  <input
                    css={[Function]}
                    disabled={true}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    css={[Function]}
                  >
                    Label
                     
                  </label>
                </div>
                <div
                  css={[Function]}
                >
                  <span
                    css={
                      Object {
                        "alignItems": "center",
                        "display": "flex",
                        "justifyContent": "center",
                        "padding": "0.125rem",
                      }
                    }
                    onClick={[Function]}
                  >
                    <span
                      css={[Function]}
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            css={
              Object {
                "alignItems": "center",
                "display": "flex",
                "position": "relative",
                "width": "fill-available",
              }
            }
          >
            <div
              css={[Function]}
            >
              <div
                css={[Function]}
              >
                <div
                  css={
                    Object {
                      "width": "100% ",
                    }
                  }
                >
                  <input
                    css={[Function]}
                    disabled={true}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    css={[Function]}
                  >
                    Label
                     
                  </label>
                </div>
                <div
                  css={[Function]}
                >
                  <span
                    css={
                      Object {
                        "alignItems": "center",
                        "display": "flex",
                        "justifyContent": "center",
                        "padding": "0.125rem",
                      }
                    }
                    onClick={[Function]}
                  >
                    <span
                      css={[Function]}
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            css={
              Object {
                "alignItems": "center",
                "display": "flex",
                "position": "relative",
                "width": "fill-available",
              }
            }
          >
            <div
              css={[Function]}
            >
              <div
                css={[Function]}
              >
                <div
                  css={
                    Object {
                      "width": "100% ",
                    }
                  }
                >
                  <input
                    css={[Function]}
                    disabled={true}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    css={[Function]}
                  >
                    Label
                     
                  </label>
                </div>
                <div
                  css={[Function]}
                >
                  <span
                    css={
                      Object {
                        "alignItems": "center",
                        "display": "flex",
                        "justifyContent": "center",
                        "padding": "0.125rem",
                      }
                    }
                    onClick={[Function]}
                  >
                    <span
                      css={[Function]}
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        css={
          Object {
            "display": "flex",
            "flexDirection": "row",
            "flexWrap": "wrap",
          }
        }
      >
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            css={
              Object {
                "alignItems": "center",
                "display": "flex",
                "position": "relative",
                "width": "fill-available",
              }
            }
          >
            <div
              css={[Function]}
            >
              <div
                css={[Function]}
              >
                <div
                  css={
                    Object {
                      "width": "100% ",
                    }
                  }
                >
                  <input
                    css={[Function]}
                    disabled={true}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    css={[Function]}
                  >
                    Label
                     
                  </label>
                </div>
                <div
                  css={[Function]}
                >
                  <span
                    css={
                      Object {
                        "alignItems": "center",
                        "display": "flex",
                        "justifyContent": "center",
                        "padding": "0.125rem",
                      }
                    }
                    onClick={[Function]}
                  >
                    <span
                      css={[Function]}
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            css={
              Object {
                "alignItems": "center",
                "display": "flex",
                "position": "relative",
                "width": "fill-available",
              }
            }
          >
            <div
              css={[Function]}
            >
              <div
                css={[Function]}
              >
                <div
                  css={
                    Object {
                      "width": "100% ",
                    }
                  }
                >
                  <input
                    css={[Function]}
                    disabled={true}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    css={[Function]}
                  >
                    Label
                     
                  </label>
                </div>
                <div
                  css={[Function]}
                >
                  <span
                    css={
                      Object {
                        "alignItems": "center",
                        "display": "flex",
                        "justifyContent": "center",
                        "padding": "0.125rem",
                      }
                    }
                    onClick={[Function]}
                  >
                    <span
                      css={[Function]}
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            css={
              Object {
                "alignItems": "center",
                "display": "flex",
                "position": "relative",
                "width": "fill-available",
              }
            }
          >
            <div
              css={[Function]}
            >
              <div
                css={[Function]}
              >
                <div
                  css={
                    Object {
                      "width": "100% ",
                    }
                  }
                >
                  <input
                    css={[Function]}
                    disabled={true}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    css={[Function]}
                  >
                    Label
                     
                  </label>
                </div>
                <div
                  css={[Function]}
                >
                  <span
                    css={
                      Object {
                        "alignItems": "center",
                        "display": "flex",
                        "justifyContent": "center",
                        "padding": "0.125rem",
                      }
                    }
                    onClick={[Function]}
                  >
                    <span
                      css={[Function]}
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField TextField with label and statuses 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    css={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        css={
          Object {
            "display": "flex",
            "flexDirection": "row",
            "flexWrap": "wrap",
          }
        }
      >
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            css={
              Object {
                "alignItems": "center",
                "display": "flex",
                "position": "relative",
                "width": "fill-available",
              }
            }
          >
            <div
              css={[Function]}
            >
              <div
                css={[Function]}
              >
                <div
                  css={
                    Object {
                      "width": "100% ",
                    }
                  }
                >
                  <input
                    css={[Function]}
                    disabled={false}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    css={[Function]}
                  >
                    Label
                     
                  </label>
                </div>
              </div>
            </div>
          </div>
          <div
            css={[Function]}
          >
            <span
              css={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "justifyContent": "center",
                  "padding": "0.125rem",
                }
              }
              onClick={[Function]}
            >
              <span
                css={[Function]}
              />
            </span>
            Error in Text Field
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            css={
              Object {
                "alignItems": "center",
                "display": "flex",
                "position": "relative",
                "width": "fill-available",
              }
            }
          >
            <div
              css={[Function]}
            >
              <div
                css={[Function]}
              >
                <div
                  css={
                    Object {
                      "width": "100% ",
                    }
                  }
                >
                  <input
                    css={[Function]}
                    disabled={false}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    css={[Function]}
                  >
                    Label
                     
                  </label>
                </div>
              </div>
            </div>
          </div>
          <div
            css={[Function]}
          >
            <span
              css={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "justifyContent": "center",
                  "padding": "0.125rem",
                }
              }
              onClick={[Function]}
            >
              <span
                css={[Function]}
              />
            </span>
            Error in Text Field
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            css={
              Object {
                "alignItems": "center",
                "display": "flex",
                "position": "relative",
                "width": "fill-available",
              }
            }
          >
            <div
              css={[Function]}
            >
              <div
                css={[Function]}
              >
                <div
                  css={
                    Object {
                      "width": "100% ",
                    }
                  }
                >
                  <input
                    css={[Function]}
                    disabled={false}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    css={[Function]}
                  >
                    Label
                     
                  </label>
                </div>
              </div>
            </div>
          </div>
          <div
            css={[Function]}
          >
            <span
              css={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "justifyContent": "center",
                  "padding": "0.125rem",
                }
              }
              onClick={[Function]}
            >
              <span
                css={[Function]}
              />
            </span>
            Error in Text Field
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            style={
              Object {
                "width": "200px",
              }
            }
          >
            <div
              css={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "position": "relative",
                  "width": "fill-available",
                }
              }
            >
              <div
                css={[Function]}
              >
                <div
                  css={[Function]}
                >
                  <div
                    css={
                      Object {
                        "width": "100% ",
                      }
                    }
                  >
                    <input
                      css={[Function]}
                      disabled={false}
                      placeholder="Label"
                      required={false}
                    />
                    <label
                      css={[Function]}
                    >
                      Label
                       
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              css={[Function]}
            >
              <span
                css={
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "justifyContent": "center",
                    "padding": "0.125rem",
                  }
                }
                onClick={[Function]}
              >
                <span
                  css={[Function]}
                />
              </span>
              Big Error Message for fixed width TextField to see icon alignment: Error Error Error Error Error Error Error Error Error Error Error
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        css={
          Object {
            "display": "flex",
            "flexDirection": "row",
            "flexWrap": "wrap",
          }
        }
      >
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            css={
              Object {
                "alignItems": "center",
                "display": "flex",
                "position": "relative",
                "width": "fill-available",
              }
            }
          >
            <div
              css={[Function]}
            >
              <div
                css={[Function]}
              >
                <div
                  css={
                    Object {
                      "width": "100% ",
                    }
                  }
                >
                  <input
                    css={[Function]}
                    disabled={false}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    css={[Function]}
                  >
                    Label
                     
                  </label>
                </div>
              </div>
            </div>
          </div>
          <div
            css={[Function]}
          >
            <span
              css={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "justifyContent": "center",
                  "padding": "0.125rem",
                }
              }
              onClick={[Function]}
            >
              <span
                css={[Function]}
              />
            </span>
            Error in Text Field
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            css={
              Object {
                "alignItems": "center",
                "display": "flex",
                "position": "relative",
                "width": "fill-available",
              }
            }
          >
            <div
              css={[Function]}
            >
              <div
                css={[Function]}
              >
                <div
                  css={
                    Object {
                      "width": "100% ",
                    }
                  }
                >
                  <input
                    css={[Function]}
                    disabled={false}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    css={[Function]}
                  >
                    Label
                     
                  </label>
                </div>
              </div>
            </div>
          </div>
          <div
            css={[Function]}
          >
            <span
              css={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "justifyContent": "center",
                  "padding": "0.125rem",
                }
              }
              onClick={[Function]}
            >
              <span
                css={[Function]}
              />
            </span>
            Error in Text Field
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            css={
              Object {
                "alignItems": "center",
                "display": "flex",
                "position": "relative",
                "width": "fill-available",
              }
            }
          >
            <div
              css={[Function]}
            >
              <div
                css={[Function]}
              >
                <div
                  css={
                    Object {
                      "width": "100% ",
                    }
                  }
                >
                  <input
                    css={[Function]}
                    disabled={false}
                    placeholder="Label"
                    required={false}
                  />
                  <label
                    css={[Function]}
                  >
                    Label
                     
                  </label>
                </div>
              </div>
            </div>
          </div>
          <div
            css={[Function]}
          >
            <span
              css={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "justifyContent": "center",
                  "padding": "0.125rem",
                }
              }
              onClick={[Function]}
            >
              <span
                css={[Function]}
              />
            </span>
            Error in Text Field
          </div>
        </div>
        <div
          style={
            Object {
              "margin": 5,
            }
          }
        >
          <div
            style={
              Object {
                "width": "200px",
              }
            }
          >
            <div
              css={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "position": "relative",
                  "width": "fill-available",
                }
              }
            >
              <div
                css={[Function]}
              >
                <div
                  css={[Function]}
                >
                  <div
                    css={
                      Object {
                        "width": "100% ",
                      }
                    }
                  >
                    <input
                      css={[Function]}
                      disabled={false}
                      placeholder="Label"
                      required={false}
                    />
                    <label
                      css={[Function]}
                    >
                      Label
                       
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              css={[Function]}
            >
              <span
                css={
                  Object {
                    "alignItems": "center",
                    "display": "flex",
                    "justifyContent": "center",
                    "padding": "0.125rem",
                  }
                }
                onClick={[Function]}
              >
                <span
                  css={[Function]}
                />
              </span>
              Big Hint Message for fixed width TextField to see icon alignment: Hint Hint Hint Hint Hint Hint Hint Hint Hint Hint
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
